--- a/src/components/main/results/ResultsContainer/ResultsContainer.scss
+++ b/src/components/main/results/ResultsContainer/ResultsContainer.scss
@@ -14,6 +14,12 @@
         flex-grow: 1;
     }
 
+    &_no-results {
+        @include for-sizes-up-from(md) {
+            margin-bottom: 4rem;
+        }
+    }
+
     &_item-query {
         margin-bottom: 1rem;
         color: $white;
